<resources>
    <string name="app_name">Ask A Muslim</string>
    <string name="prayers_time_icon">Prayers\' time icon</string>
    <string name="islamic_remembrance">Islamic remembrance</string>
    <string name="e_learning_icon">E-learning icon</string>
    <string name="home">Home</string>
    <string name="prayers_time">Prayers\' Time</string>
    <string name="home_icon">Home icon</string>
    <string name="remembrance">Azkar</string>
    <string name="courses">Courses</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Sign up Now</string>
    <string name="e_mail_hint">E-mail </string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">Sign in</string>
    <string name="i_have_account_already">I have account already</string>
    <string name="e_mail_or_username">E-mail Or Username</string>
    <string name="enter_username">Username</string>
    <string name="salah">Salah</string>
    <string name="morning">Morning</string>
    <string name="sleep">Sleep</string>
    <string name="night">night</string>
    <string name="azkar_list">Azkar </string>
    <string name="ramadan_fasting">Ramadan - Fasting</string>
    <string name="morning_icon">Morning Icon</string>
    <string name="sleep_icon">sleep icon</string>
    <string name="night_icon">Night icon</string>
    <string name="food_icon">Food Icon</string>
    <string name="next_one">Next </string>
    <string name="ask_a_muslim_icon">Ask a muslim icon</string>
    <string name="previous">Previous</string>
    <string name="mecca_and_pilgrimage_to_it_in_the_bible_pilgrimage_to_mecca_in_the_bible_bible_mecca_askamuslim">Mecca and Pilgrimage To It in The Bible |Pilgrimage to Mecca in the Bible |Bible |Mecca |AskAMuslim</string>
    <string name="qibla_direction">Qibla Direction</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="title1"> Welcome to Ask A Muslim!</string>
    <string name="title2">  Learn from available Islamic courses.</string>
    <string name="title3"> Everything you need in one place!</string>
    <string name="welcome_phrase1"> Discover Islam from authentic sources and learn about your faith effortlessly.</string>
    <string name="welcome_phrase2">Find the nearest mosque &amp; Always know the Qiblah direction. </string>
    <string name="welcome_phrase3"> Are you ready?</string>
    <string name="dot_icon">dot Icon</string>
    <string name="islamic_pictures">Islamic Pictures</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="input_your_ask_a_muslim_account">Input your Ask A Muslim account!</string>
    <string name="by_creating_your_account_you_have_to_agree_with_our_terms_and_condition">By Creating your account you have to agree with our Terms and Condition</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="arrow_left_icon">arrow_left icon</string>
    <string name="sign_in_with_e_mail_or_username">Sign In With E-mail Or Username</string>
    <string name="profile_icon">profile Icon</string>
    <string name="quran_icon">quran icon</string>
    <string name="azkar">Azkar</string>
    <string name="prayer">Prayer</string>
    <string name="more">more</string>
    <string name="features">Features</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="quran">Quran</string>
    <string name="read_the_holy_quran">Read the Holy Quran</string>
    <string name="compass_icon">Compass icon</string>
    <string name="track_daily_prayers">Track Daily Prayers</string>
    <string name="prayer_icon">prayer icon</string>
    <string name="qiblah">Qiblah</string>
    <string name="learn_about_islam">Learn About Islam!</string>
    <string name="book_icon">book icon</string>
    <string name="big_mosque_icon">big mosque icon</string>
    <string name="nearby_mosques">Nearby Mosques</string>
    <string name="a_string_of_beads_icon">a string of beads icon</string>
    <string name="daily_remember">Daily Remember</string>
    <string name="profile">Profile</string>
    <string name="qiblah_direction">Qiblah Direction</string>
    <string-array name="morning_azkar">
        
        <item>أَصْبَحْنَا وَأَصْبَحَ الْمُلْكُ لِلَّهِ، وَالْحَمْدُ لِلَّهِ، لَا إِلَهَ إِلَّا اللَّهُ وَحْدَهُ لَا شَرِيكَ لَهُ\nAsbahna wa asbahal-mulku lillah, wal-hamdulillah, la ilaha illallah wahdahu la sharika lah\nWe have entered the morning and the dominion belongs to Allah. Praise be to Allah. There is none worthy of worship except Allah alone, without partner.\nReference: Sunan Abu Dawood 5076</item>

        
        <item>اللَّهُمَّ بِكَ أَصْبَحْنَا، وَبِكَ نَحْيَا، وَبِكَ نَمُوتُ، وَإِلَيْكَ النُّشُورُ\nAllahumma bika asbahna, wa bika nahya, wa bika namutu, wa ilaykan-nushur\nO Allah, by You we enter the morning, by You we live, by You we die, and to You is the resurrection.\nReference: Jami` at-Tirmidhi 3391</item>

        
        <item>سُبْحَانَ اللَّهِ وَبِحَمْدِهِ: عَدَدَ خَلْقِهِ، وَرِضَا نَفْسِهِ، وَزِنَةَ عَرْشِهِ، وَمِدَادَ كَلِمَاتِهِ\nSubhanallahi wa bihamdihi: Adada khalqihi, wa ridha nafsihi, wa zinata arshihi, wa midada kalimatihi\nGlory is to Allah and praise is to Him, by the multitude of His creation, by His Pleasure, by the weight of His Throne, and by the extent of His Words.\nReference: Sahih Muslim 2726</item>

        
        <item>اللَّهُمَّ عَافِنِي فِي بَدَنِي، اللَّهُمَّ عَافِنِي فِي سَمْعِي، اللَّهُمَّ عَافِنِي فِي بَصَرِي\nAllahumma ‘afini fi badani, Allahumma ‘afini fi sam’i, Allahumma ‘afini fi basari\nO Allah, grant me health in my body. O Allah, grant me health in my hearing. O Allah, grant me health in my sight.\nReference: Sunan Abu Dawood 5090</item>

        
        <item>حَسْبِيَ اللَّهُ لَا إِلَهَ إِلَّا هُوَ، عَلَيْهِ تَوَكَّلْتُ، وَهُوَ رَبُّ الْعَرْشِ الْعَظِيمِ\nHasbiyallahu la ilaha illa Huwa, ‘alayhi tawakkaltu, wa Huwa Rabbul-‘Arshil-‘Azim\nSufficient for me is Allah; there is no deity except Him. On Him I have relied, and He is the Lord of the Great Throne.\nReference: Quran 9:129</item>

        
        <item>اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ شَرِّ نَفْسِي، وَمِنْ شَرِّ كُلِّ دَابَّةٍ أَنْتَ آخِذٌ بِنَاصِيَتِهَا\nAllahumma inni a’udhu bika min sharri nafsi, wa min sharri kulli dabbatin anta akhidhun binasiyatiha\nO Allah, I seek refuge in You from the evil of my soul and from the evil of every creature You hold by its forelock.\nReference: Sunan Abu Dawood 5091</item>

        
        <item>أَسْتَغْفِرُ اللَّهَ الْعَظِيمَ الَّذِي لَا إِلَهَ إِلَّا هُوَ الْحَيُّ الْقَيُّومُ وَأَتُوبُ إِلَيْهِ\nAstaghfirullahal-‘Azim alladhi la ilaha illa Huwal-Hayyul-Qayyum wa atubu ilayh\nI seek the forgiveness of Allah the Mighty, besides whom there is no deity, the Ever-Living, the Sustainer, and I repent to Him.\nReference: General Sunnah</item>

        
        <item>اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنَ الْهَمِّ وَالْحَزَنِ، وَأَعُوذُ بِكَ مِنَ الْعَجْزِ وَالْكَسَلِ، وَأَعُوذُ بِكَ مِنَ الْجُبْنِ وَالْبُخْلِ، وَأَعُوذُ بِكَ مِنْ غَلَبَةِ الدَّيْنِ وَقَهْرِ الرِّجَالِ\nAllahumma inni a’udhu bika minal-hammi wal-hazan, wa a’udhu bika minal-‘ajzi wal-kasal, wa a’udhu bika minal-jubni wal-bukhl, wa a’udhu bika min ghalabatid-dayni wa qahrir-rijal\nO Allah, I seek refuge in You from anxiety and sorrow, from weakness and laziness, from cowardice and stinginess, and from being overpowered by debt and subjugation by men.\nReference: Sunan Abu Dawood 5092</item>

        
        <item>اللَّهُمَّ اجْعَلْ فِي قَلْبِي نُورًا، وَفِي لِسَانِي نُورًا، وَفِي بَصَرِي نُورًا، وَفِي سَمْعِي نُورًا\nAllahummaj’al fi qalbi nooran, wa fi lisani nooran, wa fi basari nooran, wa fi sam’i nooran\nO Allah, place light in my heart, light in my tongue, light in my sight, and light in my hearing.\nReference: Sahih al-Bukhari 6316</item>

        
        <item>اللَّهُمَّ إِنِّي أَسْأَلُكَ خَيْرَ هَذَا الْيَوْمِ، فَتْحَهُ، وَنَصْرَهُ، وَنُورَهُ، وَبَرَكَتَهُ، وَهُدَاهُ\nAllahumma inni as’aluka khayra hathal-yaum, fathahu, wa nasrahu, wa noorahu, wa barakatahu, wa hudahu\nO Allah, I ask You for the good of this day, its opening, victory, light, blessings, and guidance.\nReference: Sunan Abu Dawood 5093</item>
    </string-array>
    <string name="right_arrow_icon">right arrow icon</string>
    <string name="faith">Faith</string>
    <string name="Continue">Continue</string>
    <string name="my_learning">My Learning</string>
    <string name="fiqh_of_ramadan">Fiqh Of Ramadan</string>
    <string name="start">Start</string>
    <string name="enroll_now">Enroll now</string>
</resources>