<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Azkar"
    android:padding="30dp"
    android:background="#F0EAEA">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_arrow_icon"
        android:contentDescription="@string/back_arrow_icon"
        android:src="@drawable/arrow_back_icon"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:layout_marginTop="20dp"
    android:text="@string/azkar_list"
    android:textColor="@color/black"
    android:textSize="30sp"
    android:id="@+id/azkar_list"
    android:textStyle="bold"
    android:textAlignment="center"
    android:layout_marginBottom="40dp"
    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_below="@id/azkar_list"

        android:layout_centerVertical="true"
        android:background="#009688"
        android:layout_marginBottom="90dp"
        >

    <LinearLayout

        android:layout_height="wrap_content"

        android:orientation="vertical"
         android:layout_width="match_parent">


        <ImageView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:id="@+id/prayer_azkar_btn"
            android:contentDescription="@string/prayers_time_icon"
            android:src="@drawable/prayer_azkar_icon"
            />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/salah"
    android:textAlignment="center"
    android:textStyle="bold"
android:textColor="@color/black"
    android:textSize="20sp"
    android:layout_marginBottom="16dp"
    />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:id="@+id/morning_azkar_btn"
            android:clickable="true"
            android:contentDescription="@string/morning_icon"
            android:focusable="true"
            android:src="@drawable/morning_azkar"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:id="@+id/sleep_azkar_btn"
            android:contentDescription="@string/sleep_icon"
            android:src="@drawable/sleep_azkar"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:id="@+id/night_azkar_btn"
            android:contentDescription="@string/night_icon"
            android:src="@drawable/night_azkar"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:id="@+id/fasting_azkar_btn"
            android:contentDescription="@string/food_icon"
            android:src="@drawable/ramadan_fasting"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ramadan_fasting"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            />


    </LinearLayout>


    </ScrollView>


</RelativeLayout>