<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp"
    android:fitsSystemWindows="true"
    android:background="#ECECF0"
    android:padding="20dp"
    >



<ImageView
    android:layout_width="wrap_content"
    android:layout_height="40dp"
android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:src="@drawable/arrow_left"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:id="@+id/arrow_left"
    android:layout_marginBottom="20dp"
    />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_below="@id/arrow_left"
        android:text="@string/sign_up_with_email"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
android:layout_marginStart="20dp"
        android:id="@+id/sign_up_textView"
        android:layout_marginBottom="10dp"


        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/input_your_ask_a_muslim_account"
        android:textColor="@color/black"

        android:textSize="15sp"
android:layout_marginStart="20dp"
        android:id="@+id/signUp_tx"
        android:layout_marginBottom="30dp"
android:layout_below="@id/sign_up_textView"

        />

    <EditText
        android:layout_centerInParent="true"
        android:textColor="@color/black"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/E_mail_edit_view"
        android:autofillHints="emailAddress"
        android:hint="@string/e_mail_hint"
        android:textColorHint="#8E8888"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/email_icon"
        android:background="@drawable/edit_view_background"
        />


    <EditText
        android:layout_above="@id/E_mail_edit_view"
        android:textColor="@color/black"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/Username_edit_view"
        android:autofillHints="username"
        android:hint="@string/enter_username"
        android:textColorHint="#8E8888"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
       android:background="@drawable/edit_view_background"
        />

    <EditText
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:textColorHint="#8E8888"


        android:layout_below="@id/E_mail_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password_edit_view"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:background="@drawable/edit_view_background"
        android:hint="@string/password_hint"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:id="@+id/checkBox_signUp"
        android:text="@string/by_creating_your_account_you_have_to_agree_with_our_terms_and_condition"
android:layout_below="@id/Password_edit_view"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:layout_below="@id/checkBox_signUp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@null"
        android:tint="@null"
        />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:text="@string/already_have_an_account"

    android:layout_below="@id/Create_account_button"
android:layout_marginStart="30dp"
    android:id="@+id/have_account_tx"
android:textColor="@color/black"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_here"
android:layout_marginStart="5dp"
       android:layout_below="@id/Create_account_button"
android:layout_toEndOf="@id/have_account_tx"
android:textColor="#4E74FA"
    android:id="@+id/signIn_tx"
        android:clickable="true"
        android:focusable="true"
        />



</RelativeLayout>



