<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#E0D9D9"
    android:fitsSystemWindows="true"
android:paddingBottom="20dp"
    >


    <!-- Your bottom bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

android:background="#C5BFBF"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        >

   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_weight="1"
       android:id="@+id/Home_button"
       android:clickable="true"
       android:focusable="true"
       tools:ignore="UseCompoundDrawables"
       android:background="?android:attr/selectableItemBackground"

       >



      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/home_icon2"
          android:layout_gravity="center"
          />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           android:textAlignment="center"
    android:text="@string/home"
           android:textColor="@color/black"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"

        android:clickable="true"
        android:focusable="true"
        android:id="@+id/Azkar"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"

        >
        <ImageView
            android:contentDescription="@string/islamic_remembrance"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"


            android:src="@drawable/praise_15178646"

            />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/remembrance"
    android:textColor="@color/black"
    android:textAlignment="center"
    />

        </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/prayers_button"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"

        >
        <ImageView
            android:contentDescription="@string/prayers_time_icon"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:contextClickable="true"
            android:background="#00000000"
            android:src="@drawable/mosque_icon"

/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prayers_time"



            android:textColor="@color/black"
            android:textAlignment="textEnd"
            />
    </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/Courses_button"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            >
            <ImageView
                android:contentDescription="@string/e_learning_icon"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:focusable="true"
                android:src="@drawable/courses_icon"
                android:clickable="true"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/courses"
                android:textColor="@color/black"
                android:textAlignment="center"

                />
        </LinearLayout>



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>