<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Walkthrough1"
    android:fitsSystemWindows="true"
android:padding="20dp"
    android:background="@color/white"
    >



    <ImageSwitcher
        android:id="@+id/myImageSwitcher"
        android:layout_width="408dp"
        android:layout_height="406dp"

        android:layout_alignParentTop="true"


android:layout_marginTop="70dp"
android:layout_marginBottom="30dp"
android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out"
        >


    </ImageSwitcher>

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Title"
android:textStyle="bold"

android:layout_below="@id/myImageSwitcher"
android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_below="@id/Title"
        android:layout_marginBottom="30dp"
        android:id="@+id/welcome_phrase"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:id="@+id/dot_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_below="@id/welcome_phrase"
        android:layout_centerInParent="true"


        >

        <ImageView

            android:id="@+id/dot1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/dot_icon"

            android:src="@drawable/dot_active" />

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/dot_inactive"
            android:contentDescription="@string/dot_icon"

            />
        <ImageView
            android:id="@+id/dot3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:contentDescription="@string/dot_icon"
            android:src="@drawable/dot_inactive" />
    </LinearLayout>


    <!-- Skip text on the left -->
    <!-- Skip text on the left -->
    <!-- Skip text on the left -->
    <TextView
        android:id="@+id/skip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@id/next_button"
        android:layout_alignParentBottom="true" />



    <!-- Next button on the right with an outline -->
    <Button
        android:layout_marginEnd="16dp"
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginBottom="16dp"
        android:textColor="#0E7D4F"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:background="@drawable/outline_button_bg"


        tools:ignore="RelativeOverlap" />

</RelativeLayout>